--- a/2-projects/1-todo-list/index.html
+++ b/2-projects/1-todo-list/index.html
@@ -15,6 +15,18 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+
+    <!-- datepicker -->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+      $(function() {
+        $("#datepicker").datepicker();
+      });
+    </script>
+    <!-- datepicker -->
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -38,6 +50,11 @@
                       class="form-control"
                       id="todoInput"
                       placeholder="New todo..."
+                    />
+                    <input
+                      class="form-control"
+                      id="datepicker"
+                      placeholder="Date"
                     />
                   </div>
                   <div class="col-auto">
