--- a/3-extra/1-guess-the-number-project/index.html
+++ b/3-extra/1-guess-the-number-project/index.html
@@ -38,7 +38,7 @@
         <br />
         <output class="Tries-output"></output>
         <br />
-        <output class="final-output">Guess a number between 1 and 100</output>
+        <output class="final-output"></output>
       </div>
     </div>
   </body>
